[workspace.package]
name = "ls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/jls"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
