[workspace.package]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/jfind", "crates/jls"]
resolver = "2"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
anyhow = "1"
crossterm = "0.27.0"
users = "0.11.0"
chrono = "0.4"
colored = "2.1.0"
