[package]
name = "jfind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { workspace = true }
anyhow = { workspace = true }
crossterm = { workspace = true }
users = { workspace = true }
chrono = { workspace = true }
rayon = "1.10.0"
colored = { workspace = true }
walkdir = "2.5.0"
ignore = "0.4"
